# react-native-vision-camera

./: .clang-format  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .prettierrc.js  ANIMATED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVICES.md  ERRORS.md  Example_file.txt  LICENSE  README.md  START_CRASH_FINDINGS.md  TODO.md  TROUBLESHOOTING.md  USB_CAMERA_GUIDE_CN.md  USB_CAMERA_IMPLEMENTATION.md  VisionCamera.h  VisionCamera.podspec  VisionCamrea.h  app.config.js  app.plugin.js  babel.config.js  biome.json  bun.lockb  bunfig.toml  file.txt  jsdoc.json  npm-publish.sh  package-lock.json  package.json  react-native-vision-camera.podspec  react-native.config.js  tagabukid  tea.yaml  temp-patch.sh  tsconfig.json  typedoc.json
android/: .editorconfig  CMakeLists.txt  FrameProcessorBindings.cpp  README.md  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
android/src/hasNamespace/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AndroidLogger.cpp  AndroidLogger.h  CameraView.cpp  CameraView.h  CameraViewModule.cpp  CameraViewModule.h  FrameHostObject.cpp  FrameHostObject.h  FrameProcessorBindings.cpp  FrameProcessorPlugin.cpp  FrameProcessorPlugin.h  FrameProcessorPluginHostObject.cpp  FrameProcessorPluginHostObject.h  FrameProcessorRuntimeManager.cpp  FrameProcessorRuntimeManager.h  JArrayList.h  JHashMap.cpp  JHashMap.h  JImage.cpp  JImage.h  JImageProxy.cpp  JImageProxy.h  JImageProxyHostObject.cpp  JImageProxyHostObject.h  JPlaneProxy.cpp  JPlaneProxy.h  JReadableArray.h  JReadableMap.h  JSIJNIConversion.cpp  JSIJNIConversion.h  MakeJSIRuntime.h  MutableJByteBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLError.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLTexture.h  PassThroughShader.cpp  PassThroughShader.h  (+7 more)
android/src/main/cpp/frameprocessor/: FrameFactory.cpp  FrameFactory.h  FrameHostObject.cpp  FrameHostObject.h  FrameProcessorPluginHostObject.cpp  FrameProcessorPluginHostObject.h  JSIJNIConversion.cpp  JSIJNIConversion.h  VisionCameraProxy.cpp  VisionCameraProxy.h
android/src/main/cpp/frameprocessor/java-bindings/: JArrayList.h  JFrame.cpp  JFrame.h  JFrameProcessor.cpp  JFrameProcessor.h  JFrameProcessorPlugin.cpp  JFrameProcessorPlugin.h  JHashMap.cpp  JVisionCameraProxy.cpp  JVisionCameraProxy.h  JVisionCameraScheduler.cpp  JVisionCameraScheduler.h
android/src/main/cpp/frameprocessors/: FrameHostObject.h  FrameProcessorPluginHostObject.cpp
android/src/main/cpp/frameprocessors/java-bindings/: JJSUnionValue.h  JOrientation.h  JSharedArray.h
android/src/main/cpp/java-bindings/: JArrayList.h  JCameraView.cpp  JCameraView.h  JFrame.cpp  JFrame.h  JFrameProcessor.cpp  JFrameProcessor.h  JFrameProcessorPlugin.cpp  JFrameProcessorPlugin.h  JHashMap.h  JImage.cpp  JImage.h  JImageProxy.cpp  JImageProxy.h  JImageProxyHostObject.cpp  JImageProxyHostObject.h  JPlaneProxy.cpp  JPlaneProxy.h  JVisionCameraProxy.cpp  JVisionCameraProxy.h  JVisionCameraScheduler.cpp  JVisionCameraScheduler.h
android/src/main/cpp/preview/: SkiaPreviewSurface.cpp  SkiaPreviewSurface.h  SkiaPreviewView.cpp  SkiaPreviewView.h
android/src/main/cpp/reanimated-headers/: AndroidErrorHandler.h  AndroidScheduler.h
android/src/main/cpp/skia/: DrawableFrameHostObject.cpp  DrawableFrameHostObject.h  JSkiaFrameProcessor.cpp  JSkiaFrameProcessor.h  OpenGLError.h  SkiaPreviewView.cpp  SkiaPreviewView.h  SkiaRenderer.cpp  SkiaRenderer.h  VisionCameraSkiaContext.cpp  VisionCameraSkiaContext.h
android/src/main/java/com/mrousavy/camera/: CameraEvent.java  CameraFormat.kt  CameraPackage.kt  CameraQueues.kt  CameraSession.kt  CameraView+Events.kt  CameraView+Focus.kt  CameraView+RecordVideo.kt  CameraView+TakePhoto.kt  CameraView+TakeSnapshot.kt  CameraView.kt  CameraViewManager.kt  CameraViewModule.kt  Errors.kt  NativePreviewView.kt
android/src/main/java/com/mrousavy/camera/core/: CameraDeviceDetails.kt  CameraSession+Configuration.kt  CameraSession.kt  CodeScannerPipeline.kt  MetadataProvider.kt  OrientationManager.kt  Photo.kt  PreviewView.kt  RecordingSession.kt  VideoPipeline.kt
android/src/main/java/com/mrousavy/camera/extensions/: CameraCaptureSession+capture.kt  (+17 more)
android/src/main/java/com/reactnativevisioncamera/: VisionCameraModule.kt  VisionCameraPackage.kt
android/src/newarch/com/mrousavy/camera/: CameraModule.java  VisionCameraManagerSpec.java
android/src/oldarch/com/mrousavy/camera/: VisionCameraManagerSpec.java
package/android/: .editorconfig  .project  CMakeLists.txt  README.md  build.gradle  gradle.properties  registration.cpp  settings.gradle
package/android/src/main/cpp/: .clang-format  MutableJByteBuffer.cpp  MutableJByteBuffer.h  MutableRawBuffer.h  OpenGLContext.h  OpenGLError.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PassThroughShader.cpp  PassThroughShader.h  VideoPipeline.cpp  VideoPipeline.h  VisionCamera.cpp
package/android/src/main/cpp/frameprocessor/: FrameHostObject.cpp  FrameProcessorPluginHostObject.cpp  FrameProcessorPluginHostObject.h  JSIJNIConversion.cpp  JSIJNIConversion.h  VisionCameraProxy.cpp  VisionCameraProxy.h
package/android/src/main/cpp/frameprocessor/java-bindings/: JFrame.cpp  JFrame.h  JFrameProcessor.cpp  JFrameProcessor.h  JFrameProcessorPlugin.cpp  JFrameProcessorPlugin.h  JJSUnionValue.h  JOrientation.h  JPixelFormat.h  JSharedArray.cpp  JSharedArray.h  JTypedArray.cpp  JTypedArray.h  JVisionCameraProxy.cpp  JVisionCameraProxy.h  JVisionCameraScheduler.cpp  JVisionCameraScheduler.h
package/android/src/main/cpp/frameprocessors/: FrameHostObject.cpp  FrameHostObject.h  FrameProcessorPluginHostObject.cpp  FrameProcessorPluginHostObject.h  JSIJNIConversion.cpp  VisionCameraProxy.cpp  VisionCameraProxy.h
package/android/src/main/cpp/frameprocessors/java-bindings/: JFrame.h  JFrameProcessor.cpp  JFrameProcessor.h  JFrameProcessorPlugin.h  JPixelFormat.h  JVisionCameraProxy.cpp  JVisionCameraProxy.h  JVisionCameraScheduler.cpp  JVisionCameraScheduler.h
package/android/src/newarch/: VisionCameraViewManagerSpec.kt
package/android/src/oldarch/: VisionCameraViewManagerSpec.kt
(+2378 files in other folders)
